# SimpleVNKey

./: .gitignore
char-config/: tcvn3.yaml  vni-windows.yaml
kbengine/: .cproject  .gitignore  .project  CMakeLists.txt  build-test.sh  char_convert.js  char_to_hex.js  create-build.sh
kbengine/src/: CMakeLists.txt  kbengine-test.cpp
kbengine/src/kbengine/: datatypes.h  entrybuffer.cpp  entrybuffer.h  kbengine.cpp  kbengine.h  macrologger.h  utils.h  vnlexi.cpp  vnlexi.h  wordbuffer.cpp  wordbuffer.h
kbengine/src/test/: test-main.cc  test-modern-tone.cc  test-telex.cc  test-vniwindows.cc
kbengine/src/test/fixture/: kbengine-test-telex.cc  kbengine-test.cc  kbengine-test.h  keycode-map.h
kbengine/test/test.xcodeproj/: project.pbxproj
kbengine/test/test.xcodeproj/project.xcworkspace/xcuserdata/tamtt5.xcuserdatad/: UserInterfaceState.xcuserstate
kbengine/test/test.xcodeproj/xcuserdata/tamtt5.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos/SimpleVNKey/SimpleVNKey/: AppDelegate.swift  BundleExt.swift  CGKeyCodeInitializers.swift  CharacterEncodingLoader.swift  Common.swift  Info.plist  KeyCode.swift  Menu.swift  PreferenceView.swift  SimpleVNKeyApp.swift
macos/SimpleVNKey/SimpleVNKey.xcodeproj/: project.pbxproj
macos/SimpleVNKey/SimpleVNKey.xcodeproj/project.xcworkspace/xcuserdata/tamtt5.xcuserdatad/: UserInterfaceState.xcuserstate
macos/SimpleVNKey/SimpleVNKey.xcodeproj/project.xcworkspace/xcuserdata/tamtt5.xcuserdatad/xcdebugger/: Expressions.xcexplist
macos/SimpleVNKey/SimpleVNKey.xcodeproj/xcshareddata/xcschemes/: SimpleVNKey.xcscheme
macos/SimpleVNKey/SimpleVNKey.xcodeproj/xcuserdata/tamtt5.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos/SimpleVNKey/SimpleVNKey.xcodeproj/xcuserdata/tamtt5.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/SimpleVNKey/SimpleVNKey.xcworkspace/: contents.xcworkspacedata
macos/SimpleVNKey/SimpleVNKey/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/SimpleVNKey/SimpleVNKey/Assets.xcassets/MenuIconV.imageset/: Contents.json
macos/SimpleVNKey/SimpleVNKey/EngineBridge/: KBEngineWrapper.h  KBEngineWrapper.mm  SimpleVNKey-Bridging-Header.h
macos/SimpleVNKey/SimpleVNKey/SimpleVNKey Localizations/en.xcloc/: contents.json
macos/SimpleVNKey/SimpleVNKey/SimpleVNKey Localizations/en.xcloc/Localized Contents/: en.xliff
macos/SimpleVNKey/SimpleVNKey/SimpleVNKey Localizations/en.xcloc/Source Contents/SimpleVNKey/en.lproj/: InfoPlist.strings  Localizable.strings
macos/SimpleVNKey/SimpleVNKey/SimpleVNKey Localizations/vi.xcloc/: contents.json
macos/SimpleVNKey/SimpleVNKey/SimpleVNKey Localizations/vi.xcloc/Localized Contents/: vi.xliff
macos/SimpleVNKey/SimpleVNKey/View Models/: SettingViewModel.swift
macos/SimpleVNKey/SimpleVNKey/Views/: AboutView.swift  GeneralSettingView.swift  KeycodeCaptureView.swift  PreferenceView.swift
macos/SimpleVNKey/SimpleVNKey/vi.lproj/: Localizable.strings
macos/SimpleVNKey/SimpleVNKeyTests/: SimpleVNKeyTests.swift
macos/SimpleVNKey/SimpleVNKeyUITests/: SimpleVNKeyUITests.swift  SimpleVNKeyUITestsLaunchTests.swift
